data/derived/fa15/progs/unify/prog2782.ml.out
Characters 57-58:
  let fixpoint (f,b) = wwhile (let n x =  (f , x = f x) in f,b);;
                                                           ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
